<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/psqisurvey"
	        android:text="@string/psqisurvey_q10" />
	    <RadioGroup 
	        android:id="@+id/radiogroup_q10"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <RadioButton android:id="@+id/radio_never10"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/never"
		        android:textSize="@dimen/psqisurvey_radio"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/radio_once10"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/once"
		        android:textSize="@dimen/psqisurvey_radio"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/radio_twice10"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/twice"
		        android:textSize="@dimen/psqisurvey_radio"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/radio_three10"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/three"
		        android:textSize="@dimen/psqisurvey_radio"
		        android:onClick="onRadioButtonClicked"/>
		</RadioGroup>
		
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/psqisurvey"
	        android:text="@string/psqisurvey_q11" />
	    <RadioGroup 
	        android:id="@+id/radiogroup_q11"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <RadioButton android:id="@+id/radio_never11"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/never"
		        android:textSize="@dimen/psqisurvey_radio"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/radio_once11"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/once"
		        android:textSize="@dimen/psqisurvey_radio"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/radio_twice11"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/twice"
		        android:textSize="@dimen/psqisurvey_radio"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/radio_three11"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/three"
		        android:textSize="@dimen/psqisurvey_radio"
		        android:onClick="onRadioButtonClicked"/>
		</RadioGroup>
		
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/psqisurvey"
	        android:text="@string/psqisurvey_q12" />
	    <RadioGroup 
	        android:id="@+id/radiogroup_q12"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <RadioButton android:id="@+id/radio_never12"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/never"
		        android:textSize="@dimen/psqisurvey_radio"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/radio_once12"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/once"
		        android:textSize="@dimen/psqisurvey_radio"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/radio_twice12"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/twice"
		        android:textSize="@dimen/psqisurvey_radio"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/radio_three12"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/three"
		        android:textSize="@dimen/psqisurvey_radio"
		        android:onClick="onRadioButtonClicked"/>
		</RadioGroup>
		
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/psqisurvey"
	        android:text="@string/psqisurvey_q13" />
	    <RadioGroup 
	        android:id="@+id/radiogroup_q13"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <RadioButton android:id="@+id/radio_never13"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/never"
		        android:textSize="@dimen/psqisurvey_radio"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/radio_once13"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/once"
		        android:textSize="@dimen/psqisurvey_radio"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/radio_twice13"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/twice"
		        android:textSize="@dimen/psqisurvey_radio"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/radio_three13"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/three"
		        android:textSize="@dimen/psqisurvey_radio"
		        android:onClick="onRadioButtonClicked"/>
		</RadioGroup>
		<Button 
	        android:id="@+id/next_button2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="button3_onClick"
	        android:text="@string/finish" />
	</LinearLayout>
</ScrollView>